--- a/index.html
+++ b/index.html
@@ -1,44 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    </head>
-    <body>
-        <div style="color: azure;">
-            <h1 style="color: chartreuse;">Tran Hong Nhung FDB2023A</h1>
-            <hr />
-            <p>Class: FDB2023A</p>
-            <ol>
-                <li style="color: aqua;">Inf</li>
-                <ol>
-                    <li style="color: brown;">Date of birth: 07/12/2005</li>
-                </ol>
-                <table border="1">
-                    <tr>
-                        <th style="background-color: darkolivegreen;">Hobby</th>
-                        <th style="background-color: darkolivegreen;">Weakness</th>
-                    </tr>
-                    <tr>
-                        <td style="color: blueviolet;">Music</td>
-                        <td style="color: blueviolet;">Animals</td>
-                    </tr>
-                    <tr>
-                        <td style="color: blue;">lowtech</td>
-                        <td style="color: blue;">In</td>
-                    </tr>
-                </table>
-            </ol>
-        </div>
-        <img src="images/Trần Hồng Nhung.JPG" alt="my picture" style="width: 180px;">
-        <a href="danh sach.html">Back</a>
-    <body>
-        </html>
- <title>...</title>
-<h1 style="color: chartreuse;">The end.</h1>
-<hr />        
-
-
-
-
-
-
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Week 4</title>
+    <style>
+        strong {
+            color: red;
+        }
+        a {
+            color: black;
+            text-decoration: none;
+        }
+        a:visited {
+            color: black;
+        }
+        a:hover {
+            font-weight: bold;
+            color: brown;
+        }
+        li:hover {
+            font-weight: bold;
+            color: brown;
+        }
+    </style>
+</head>
+<body>
+    <h1>Table of content</h1>
+    <ol>
+        <li><a href="#Internet">Internet</a></li>
+        <li><a href="#Layout">Layout</a></li>
+        <li><a href="#Linear Layout">Linear Layout</a></li>
+        <li><a href="#Pathname">Pathname</a></li>
+    </ol>
+    <hr>
+    <strong id="Internet" >Internet</strong>
+    <p>
+        This is the content of Internet This is the content of Internet This is the content of Internet This is the content of Internet This is the content of Internet This is the content of Internet This is the content of Internet This is the content of Internet This is the content of Internet This is the content of Internet This is the content of Internet This is the content of Internet This is the content of Internet This is the content of Internet
+    </p>
+    <strong id="Layout">Layout</strong>
+    <p>
+        This is the content of Layout  This is the content of Layout  This is the content of Layout  This is the content of Layout  This is the content of Layout  This is the content of Layout  This is the content of Layout  This is the content of Layout  This is the content of Layout  This is the content of Layout This is the content of Layout This is the content of Layout This is the content of Layout This is the content of Layout This is the content of Layout This is the content of Layout This is the content of Layout 
+    </p>
+    <strong id="Linear Layout">Linear Layout</strong>
+    <p>
+        This is the content of Linear Layout This is the content of Linear Layout This is the content of Linear Layout This is the content of Linear Layout This is the content of Linear Layout This is the content of Linear Layout This is the content of Linear Layout This is the content of Linear Layout This is the content of Linear Layout This is the content of Linear Layout This is the content of Linear Layout This is the content of Linear Layout This is the content of Linear Layout This is the content of Linear Layout This is the content of Linear Layout 
+    </p>
+    <strong id="Pathname">Pathname</strong>
+    <p>
+        This is the content of Pathname This is the content of Pathname This is the content of Pathname This is the content of Pathname This is the content of Pathname This is the content of Pathname This is the content of Pathname This is the content of Pathname This is the content of Pathname This is the content of Pathname This is the content of Pathname This is the content of Pathname This is the content of Pathname This is the content of Pathname This is the content of Pathname
+    </p>
+</body>
+</html>
