--- a/Week 5/labex.html/ex3.html
+++ b/Week 5/labex.html/ex3.html
@@ -3,32 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create product list with CSS3</title>
+    <title>Create students list with CSS3</title>
     <style type="text/CSS"> 
-    .ProductDetails {display: none;}
-    .Prodcut img {
+    .StudentDetails {display: none;}
+    .Student img {
         width: 150px;
         height: 150px;
         border-radius: 20px;
         box-shadow: 5px 5px 10px #aaa;
     }
-    .ProductName { font-weight: bold;}
-    .ProdcutPrice { font-size: italic;}
-    .ProductPrice:before { content:" - ";}
-    .Product {
+    .StudentName { font-weight: bold;}
+    .StudentClass { font-size: italic;}
+    .StudentClass:before { content:" - ";}
+    .Student {
         text-align: center;
         width: 150px;
         margin: 0px 20px;
         float: left;
         cursor: pointer;
     }
-    .Product:hover .ProductDetails {display: block;}
+    .Product:hover .StudentClass {display: block;}
     </style>
 </head>
 <body>
     <div>
-        <div class="Product">
-            <img src="" alt="">
+        <div class="Student">
+            <img src="img/mèo1.jpg" alt="picture">
+            <div class="StudentDetails">
+                <span class="StudentName">A</span>
+                <span class="StudentClass">Class A1</span>
+            </div>
+        </div>
+        <div class="Student">
+            <img src="img/mèo2.jpg" alt="picture">
+            <div class="StudentDetails">
+                <span class="StudentName">B</span>
+                <span class="StudentClass">Class A2</span>
+            </div>
+        </div>
+        <div class="Student">
+            <img src="img/mèo3.jpg" alt="picture">
+            <div class="StudentDetails">
+                <span class="StudentName">C</span>
+                <span class="StudentClass">Class A3</span>
+            </div>
+        </div>
+        <div class="Student">
+            <img src="img/mèo4.jpg" alt="picture">
+            <div class="StudentDetails">
+                <span class="StudentName">D</span>
+                <span class="StudentClass">Class B1</span>
+            </div>
+        </div>
+        <div class="Student"> 
+            <img src="img/mèo5.jpg" alt="picture">
+            <div class="StudentDetails">
+                <span class="StudentName">E</span>
+                <span class="StudentClass">Class B2</span>
+            </div>
+        </div>
+        <div class="Student">
+            <img src="img/mèo6.htm" alt="picture">
+            <div class="StudentDetails">
+                <span class="StudentName">F</span>
+                <span class="StudentClass">Class B3</span>
+            </div>
+        </div>
+        <div class="Student">
+            <img src="img/mèo7.jpg" alt="picture">
+            <div class="StudentDetails">
+                <span class="StudentName">G</span>
+                <span class="StudentClass">Class C1</span>
+            </div>
+        </div>
+        <div class="Students">
+            <img src="img/mèo8.jpg" alt="picture">
+            <div class="StudentDetails">
+                <span class="StudentName">H</span>
+                <span class="StudentClass">Class C2</span>
+            </div>
+        </div>
+        <div class="Students">
+            <img src="img/mèo9.jpg" alt="picture">
+            <div class="StudentDetails"> 
+                <span class="StudentName">I</span>
+                <span class="StudentClass">Class C3</span>
+            </div>
+        </div>
+        <div class="Student">
+            <img src="img/mèo10.jpg" alt="picture">
+            <div class="StudentDetails">
+                <span class="StudentName">K</span>
+                <span class="StudentClass">Class C4</span>
+            </div>
         </div>
     </div>
 </body>
