--- a/Week 5/labex.html/ex3.html
+++ b/Week 5/labex.html/ex3.html
@@ -21,77 +21,78 @@
         margin: 0px 20px;
         float: left;
         cursor: pointer;
+        margin-bottom: 30px;
     }
-    .Product:hover .StudentClass {display: block;}
+    .Student:hover .StudentDetails {display: block;}
     </style>
 </head>
 <body>
     <div>
         <div class="Student">
-            <img src="img/mèo1.jpg" alt="picture">
+            <img src="../img/mèo1.jpg" alt="picture" />
             <div class="StudentDetails">
                 <span class="StudentName">A</span>
                 <span class="StudentClass">Class A1</span>
             </div>
         </div>
         <div class="Student">
-            <img src="img/mèo2.jpg" alt="picture">
+            <img src="../img/mèo2.jpg" alt="picture" />
             <div class="StudentDetails">
                 <span class="StudentName">B</span>
                 <span class="StudentClass">Class A2</span>
             </div>
         </div>
         <div class="Student">
-            <img src="img/mèo3.jpg" alt="picture">
+            <img src="../img/mèo3.jpg" alt="picture" />
             <div class="StudentDetails">
                 <span class="StudentName">C</span>
                 <span class="StudentClass">Class A3</span>
             </div>
         </div>
         <div class="Student">
-            <img src="img/mèo4.jpg" alt="picture">
+            <img src="../img/mèo4.jpg" alt="picture" />
             <div class="StudentDetails">
                 <span class="StudentName">D</span>
                 <span class="StudentClass">Class B1</span>
             </div>
         </div>
         <div class="Student"> 
-            <img src="img/mèo5.jpg" alt="picture">
+            <img src="../img/mèo5.jpg" alt="picture" />
             <div class="StudentDetails">
                 <span class="StudentName">E</span>
                 <span class="StudentClass">Class B2</span>
             </div>
         </div>
         <div class="Student">
-            <img src="img/mèo6.htm" alt="picture">
+            <img src="../img/mèo6.jpg" alt="picture" />
             <div class="StudentDetails">
                 <span class="StudentName">F</span>
                 <span class="StudentClass">Class B3</span>
             </div>
         </div>
         <div class="Student">
-            <img src="img/mèo7.jpg" alt="picture">
+            <img src="../img/mèo7.jpg" alt="picture" />
             <div class="StudentDetails">
                 <span class="StudentName">G</span>
                 <span class="StudentClass">Class C1</span>
             </div>
         </div>
-        <div class="Students">
-            <img src="img/mèo8.jpg" alt="picture">
+        <div class="Student">
+            <img src="../img/mèo8.jpg" alt="picture" style="width: 150px;">
             <div class="StudentDetails">
                 <span class="StudentName">H</span>
                 <span class="StudentClass">Class C2</span>
             </div>
         </div>
-        <div class="Students">
-            <img src="img/mèo9.jpg" alt="picture">
+        <div class="Student">
+            <img src="../img/mèo9.jpg" alt="picture" />
             <div class="StudentDetails"> 
                 <span class="StudentName">I</span>
                 <span class="StudentClass">Class C3</span>
             </div>
         </div>
         <div class="Student">
-            <img src="img/mèo10.jpg" alt="picture">
+            <img src="../img/mèo10.jpg" alt="picture" />
             <div class="StudentDetails">
                 <span class="StudentName">K</span>
                 <span class="StudentClass">Class C4</span>
