--- a/week 6/labex.html/ex1.html
+++ b/week 6/labex.html/ex1.html
@@ -25,8 +25,7 @@
         return;
     } else {
         var result = parseFloat(txta) + parseFloat(txtb);
-        alert("result:\n" + 
-        txta + "+" + txtb + "=" + "\n" + result);
+        alert("result:\n" +  txta + "+" + txtb + "=" + "\n" + result);
     }
     }
 </script>
