--- a/week 6/labex.html/ex2.html
+++ b/week 6/labex.html/ex2.html
@@ -7,16 +7,23 @@
 </head>
 <body>
     <input type="text" id="txta">
-    <button onclick="hienthi()">
+    <input type="text" id="txtb">
+    <button onclick="result()">
         Hien thi
     </button>
 </body>
 <script>
-    function hienthi() {
-       var txta = document.getElementById("txta").value;
-       if(txta == null || txta == "" || isNaN(txta))
-       document.write("<font color='red'>You must enter a number</font>");
+    function result() {
+        var txta = document.getElementById("txta").value;
+        var txtb = document.getElementById("txtb").value;
+        if (txta == null || txta == "" || isNaN(txta)) {
+            document.write ("<font color='red'>You must enter a number</font>");
+        } else if (txtb == null || txtb == "" || isNaN(txtb)) {
+            document.write ("<font color='red'>You must enter a number</font>");
+        } else {
+            var result = parseFloat(txta) + parseFloat(txtb);
+            alert("result:\n" + txta + "+" + txtb + "=" + "\n" + result);
+        }
     }
 </script>
-
 </html>
